Bug #28921  	Queries containg UDF functions are cached

Additional edits to the 5.0 ChangeSet|1.2519 that are necessary for the fix to work with the new code structure in 5.1.